[tool.poetry]
name = "chroma_key_Movie_Creator"
version = "0.1.0"
description = ""
authors = ["SBS_takumi"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
isort = "^5.10.1"
black = "^22.10.0"
pyproject-flake8 = "^5.0.4.post1"
pytest = "^7.2.0"
opencv-python = "^4.9.0.80"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
ignore = "E203,"

[tool.pytest.ini_options]
testpaths = ["tests",]
