[tool.poetry]
name = "chroma_key_Movie_Creator"
version = "0.1.0"
description = ""
authors = ["SBS_takumi"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.9.0.80"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
pytest = "^8.2.2"
isort = "^5.13.2"
black = "^24.4.2"
pyproject-flake8 = "^7.0.0"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
ignore = "E203,"

[tool.pytest.ini_options]
testpaths = ["tests",]
